discussion/kv_engine/129817/129817_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39436: Track per-collection disk_size with Magma

Update the tracked collection size on disk when backed by Magma. This
was already done under couchstore.

Change-Id: Id3513d105045c272f25c0c34ec2ab4e2f04906fd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-25 13:50:37.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-06-25 13:55:53.000000000
Message: 
Patch Set 6: Verified+1

This will definitely fail CV until CV is updated to use the newer checkout scripting so it auths and can find the magma patchset to checkout.

Verified manually, and is a small change. The matching magma change passed CV.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-25 14:58:13.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24840/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1189:36:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24840/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28821/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1186): error C2664: "magma::Status magma::Magma::WriteDocs(const magma::Magma::KVStoreID,const std::vector<magma::Magma::WriteOperation,std::allocator<_Ty>> &,const magma::Magma::KVStoreRevision,const magma::Magma::WriteDocsCallback,const magma::Magma::PostWriteDocsCallback)": cannot convert argument 4 from "MagmaKVStore::saveDocs::<lambda_bcf2570f970ed5793317d1319472e0b0>" to "const magma::Magma::WriteDocsCallback" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28821/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3015/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1189:36: error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>") [clang-diagnostic-error]
                                   writeDocsCB,
                                   ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:421:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      function(nullptr_t) noexcept
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:432:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "const std::function<void (const magma::Magma::WriteOperation &, bool, bool)> &" for 1st argument
      function(const function& __x);
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:441:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "std::function<void (const magma::Magma::WriteOperation &, bool, bool)> &&" for 1st argument
      function(function&& __x) noexcept : _Function_base()
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:465:2: note: candidate template ignored: substitution failure [with _Functor = (lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24), $1 = void]: no type named "type" in "std::result_of<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24) &(const magma::Magma::WriteOperation &, bool, bool)>"
        function(_Functor);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:724:46: note: passing argument to parameter "docCallback" here
                     const WriteDocsCallback docCallback = nullptr,
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3015/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1189:36:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3015/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4531/ : FAILURE

Compile error at [2020-06-25T14:29:18.975Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1190:51:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> > >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, magma::Slice)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4531/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4373/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4440/ : FAILURE

Compile error at [2020-06-25T14:29:04.624Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1190:51:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> > >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, magma::Slice)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3480/ : FAILURE

Compile error at [2020-06-25T13:51:57.080Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1189:36:
error: no viable conversion from "(lambda at ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3480/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12257/ : FAILURE

Compile error at [2020-06-25T14:33:01.975Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1190:51:
error: no matching function for call to ?magma::Magma::WriteDocs(Vbid::id_type, MagmaKVStore::WriteOps&, __gnu_cxx::__alloc_traits<std::allocator<Monotonic<long unsigned int> > >::value_type&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(const magma::Magma::WriteOperation&, bool, magma::Slice)>&, MagmaKVStore::saveDocs(VB::Commit&, kvstats_ctx&)::<lambda(MagmaKVStore::WriteOps&)>&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12257/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1521/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-07-02 12:48:58.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-07-02 14:28:03.000000000
Message: 
Patch Set 6: Code-Review-1

(1 comment)
Line:1846, engines/ep/tests/module_tests/collections/evp_store_collections_test.cc -> Prefer GTEST_SKIP();

----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-07-06 11:45:23.000000000
Message: 
Patch Set 6:

(1 comment)
Line:1846, engines/ep/tests/module_tests/collections/evp_store_collections_test.cc -> Nice - didn't realise we were on a version that had SKIP :partyparrot:

----------------------------------------------------------------------------------------------------------------------
